# birthday-in-pi

./: Cargo.toml  Readme.md
.github/workflows/: publish.yml  rust.yml
src/: main.rs  utils.rs
